# rio-viz

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml
examples/: Display_tiles_in_notebook.ipynb  STAC_in_notebook.ipynb  Use_Custom_algorithm.ipynb
rio_viz/: __init__.py  app.py  compat.py  dependencies.py  dependency.py  raster.py  raster_to_mvt.pyx  server.py  utils.py
rio_viz/algorithm/: __init__.py  dem.py  index.py
rio_viz/io/: __init__.py  mosaic.py  reader.py
rio_viz/models/: responses.py
rio_viz/resources/: enums.py
rio_viz/ressources/: common.py  enums.py  responses.py
rio_viz/scripts/: __init__.py  cli.py
rio_viz/src/css/: assembly.min.css
rio_viz/src/js/: assembly.js  mapbox-gl.js  mapbox-gl.js.map
rio_viz/templates/: __init__.py  assets.html  bands.html  index.html  map.html  simple.html  template.py  viewer.py  wmts.xml
tests/: test_app.py  test_cli.py  test_enums.py  test_raster.py  test_server.py
tests/fixtures/: cogb1.tif  noncog.tif
