[project]
name = "rio-viz"
description = "Visualize Cloud Optimized GeoTIFF in browser"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "braceexpand",
    "rio-cogeo>=3.1",
    "titiler.core>=0.5,<0.8",
    "starlette-cramjam>=0.3,<0.4",
    "uvicorn",
]

[project.optional-dependencies]
mvt = [
    "rio-tiler-mvt==0.0.1.dev2",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "requests",
]
dev = [
    "pre-commit",
]

[project.urls]
Source = "https://github.com/developmentseed/rio-viz"

[project.entry-points."rasterio.rio_plugins"]
viz = "rio_viz.scripts.cli:viz"

[build-system]
requires = ["flit>=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "rio_viz"

[tool.flit.sdist]
exclude = [
    "tests/",
    "docs/",
    ".github/",
    "CHANGES.md",
    "CONTRIBUTING.md",
]

[tool.isort]
profile = "black"
known_first_party = ["rio_viz"]
known_third_party = ["rasterio", "rio_tiler", "morecantile", "titiler"]
forced_separate = ["titiler"]
default_section = "THIRDPARTY"

[tool.mypy]
no_strict_optional = "True"

[tool.pydocstyle]
select = "D1"
match = "(?!test).*.py"
