[project]
name = "rio-viz"
description = "Visualize Cloud Optimized GeoTIFF in browser"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "braceexpand",
    "rio-cogeo>=3.1",
    "rio-tiler>=4.1.6,<5.0",
    "titiler.core>=0.10.1,<0.12",
    "starlette-cramjam>=0.3,<0.4",
    "uvicorn",
    "server-thread>=0.2.0",
    "fastapi<0.95",
]

[project.optional-dependencies]
mvt = [
    "rio-tiler-mvt>=0.1,<0.2",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "requests",
]
dev = [
    "pre-commit",
]

[project.urls]
Source = "https://github.com/developmentseed/rio-viz"

[project.entry-points."rasterio.rio_plugins"]
viz = "rio_viz.scripts.cli:viz"

[build-system]
requires = ["flit>=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "rio_viz"

[tool.flit.sdist]
exclude = [
    "tests/",
    "docs/",
    ".github/",
    "CHANGES.md",
    "CONTRIBUTING.md",
]

[tool.isort]
profile = "black"
known_first_party = ["rio_viz"]
known_third_party = ["rasterio", "rio_tiler", "morecantile", "titiler"]
forced_separate = ["titiler"]
default_section = "THIRDPARTY"

[tool.mypy]
no_strict_optional = true

[tool.ruff]
select = [
    "D1",  # pydocstyle errors
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B905",  # ignore zip() without an explicit strict= parameter, only support with python >3.10
]
