[project]
name = "rio-viz"
description = "Visualize Cloud Optimized GeoTIFF in browser"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Vincent Sarago", email = "vincent@developmentseed.com"},
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version"]
dependencies = [
    "braceexpand",
    "rio-cogeo>=5.0",
    "titiler.core>=0.20.0,<0.22",
    "starlette-cramjam>=0.4,<0.5",
    "uvicorn",
    "server-thread>=0.2.0",
]

[project.optional-dependencies]
mvt = [
    "rio-tiler-mvt>=0.2,<0.3",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "requests",
]
dev = [
    "pre-commit",
]

[project.urls]
Source = "https://github.com/developmentseed/rio-viz"

[project.entry-points."rasterio.rio_plugins"]
viz = "rio_viz.scripts.cli:viz"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "rio_viz/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/tests",
  ".ruff_cache/",
  "examples/",
  ".github",
  ".history",
  ".bumpversion.cfg",
  ".gitignore",
  "Dockerfile",
  ".pre-commit-config.yaml",
  "CHANGES.md",
  "CONTRIBUTING.md",
]

[tool.isort]
profile = "black"
known_first_party = ["rio_viz"]
known_third_party = ["rasterio", "rio_tiler", "morecantile", "titiler"]
forced_separate = ["titiler"]
default_section = "THIRDPARTY"

[tool.mypy]
no_strict_optional = true

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = [
    "D1",  # pydocstyle errors
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # flake8
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B905",  # ignore zip() without an explicit strict= parameter, only support with python >3.10
    "B028",
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.bumpversion]
current_version = "0.13.1"
search = "{current_version}"
replace = "{new_version}"
regex = false
tag = true
commit = true
tag_name = "{new_version}"

[[tool.bumpversion.files]]
filename = "rio_viz/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
