[bumpversion]
current_version = 0.9.0
commit = True
tag = True
tag_name = {new_version}

[bumpversion:file:rio_viz/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[metadata]
version = attr: rio_viz.__version__

[isort]
profile = black
known_first_party = rio_viz
forced_separate = titiler
known_third_party = rasterio,rio_tiler,morecantile,titiler
default_section = THIRDPARTY

[flake8]
ignore = E501,W503,E203
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-complexity = 12
max-line-length = 90

[mypy]
no_strict_optional = True

[pydocstyle]
select = D1
match = (?!test).*\.py
